# VG_Engine

./: .gitmodules  CMakeLists.txt  README.md
Dependencies/Catch2/include/Catch2/: catch.hpp
Dependencies/STB/: CMakeLists.txt  stb_image.c
Source/Engine/: CMakeLists.txt  EngineExceptions.hpp  EngineGlobals.hpp  MetaHeader.hpp  Test.cpp  Win32Exports.hpp
Source/Engine/Display/: DisplayManagement.cpp  DisplaysAPI.hpp  WindowManagement.cpp
Source/Engine/Display/Vulkan/: VulkanManagement.cpp
Source/Engine/Utils/: EngineManagement.cpp  InitScripts.cpp  PCH.cpp  PCH.hpp  UtilsAPI.hpp  VulkanAsserts.hpp
Source/Engine/Utils/Logging/: LoggingFunctions.cpp  PrivateLog.hpp  PublicLog.hpp
Source/Engine/include/VG_Engine/: Core.hpp  Engine.hpp
Source/EngineTests/: CMakeLists.txt  PCH.cpp  PCH.hpp  TestGlobals.hpp  TestMain.cpp  WindowTests.cpp
Source/VKGame/: CMakeLists.txt  Test.cpp
VG_Engine/: CMakeLists.txt  VG_Engine.cpp  VG_Engine.h
